# tree-sitter-solidity

./: .gitignore  .prettierrc  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
backup/: declarations_enum.txt  declarations_error.txt  declarations_fallback.txt  declarations_function.txt  declarations_library.txt  declarations_modifier.txt  declarations_parameter.txt  declarations_receive.txt  declarations_state_variable.txt  declarations_user_defined_value_type.txt  expressions_assignment.txt  expressions_bitwise.txt  expressions_exponentiation.txt  expressions_logical.txt  expressions_meta_type.txt  expressions_payable_conversion.txt  expressions_shift.txt  expressions_slicing.txt  functions_expressions.txt  functions_variables.txt  statements_break.txt  statements_continue.txt  statements_do_while.txt  statements_for.txt  statements_if.txt  statements_return.txt  statements_revert.txt  statements_while.txt  types_address.txt  types_array.txt  types_bool.txt  types_bytes.txt  types_int.txt  types_uint.txt  types_user_defined.txt
bindings/c/: tree-sitter-solidity.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
docs/solidity/: SolidityLexer.g4  SolidityParser.g4  assembly.rst  contracts.rst  control-structures.rst  index.rst  metadata.rst  natspec-format.rst  resources.rst
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.txt  comments.txt  contracts.txt  (+51 more)
(+84 files in other folders)
